force-app/main/default/objects/Host_Information__c/Host_Information__c.object-meta.xml
<CustomObject>
    <label>Host Information</label>
    <nameField>
        <label>Host Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Host Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>