force-app/main/default/objects/Host_Information__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Host Information</relationshipLabel>
    <relationshipName>Host_Information</relationshipName>
    <type>Lookup</type>
</CustomField>