force-app/main/default/objects/Host_Information__c/fields/Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Recipient of XRS Welcome email.</description>
    <inlineHelpText>Select the contact to receive the XRS Welcome email.</inlineHelpText>
    <label>Email Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Host Information</relationshipLabel>
    <relationshipName>Host_Information</relationshipName>
    <type>Lookup</type>
</CustomField>