force-app/main/default/objects/Host_Information__c/fields/Host_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>Host_Company_ID__c</fullName>
    <description>Host Company ID</description>
    <label>Host Company ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>