force-app/main/default/objects/Host_Information__c/fields/Host_Password__c.field-meta.xml
<CustomField>
    <fullName>Host_Password__c</fullName>
    <description>Host Password</description>
    <label>Host Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>