force-app/main/default/objects/Host_Information__c/fields/Host_Product__c.field-meta.xml
<CustomField>
    <fullName>Host_Product__c</fullName>
    <description>Host Product</description>
    <label>Host Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XRS</fullName>
            </value>
            <value>
                <fullName>Turnpike</fullName>
            </value>
            <value>
                <fullName>Xatanet</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>