force-app/main/default/objects/Host_Information__c/fields/Host_Service__c.field-meta.xml
<CustomField>
    <fullName>Host_Service__c</fullName>
    <description>Host Service</description>
    <label>Host Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MCT</fullName>
            </value>
            <value>
                <fullName>realtimeAP</fullName>
            </value>
            <value>
                <fullName>RM</fullName>
            </value>
            <value>
                <fullName>Route Tracker</fullName>
            </value>
            <value>
                <fullName>RTFuel</fullName>
            </value>
            <value>
                <fullName>TpMobileFuel</fullName>
            </value>
            <value>
                <fullName>TPMobile Premium</fullName>
            </value>
            <value>
                <fullName>TPMobile Standard</fullName>
            </value>
            <value>
                <fullName>TVMStan</fullName>
            </value>
            <value>
                <fullName>XRS Premium</fullName>
            </value>
            <value>
                <fullName>XRS EOBR</fullName>
            </value>
            <value>
                <fullName>XRS Compliance</fullName>
            </value>
            <value>
                <fullName>XRS Core</fullName>
            </value>
            <value>
                <fullName>XRS Performance</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>