force-app/main/default/objects/Host_Information__c/fields/Host_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Host_User_Id__c</fullName>
    <description>Host User ID</description>
    <label>Host User Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>