force-app/main/default/objects/Host_Information__c/fields/Host_Web_Site__c.field-meta.xml
<CustomField>
    <fullName>Host_Web_Site__c</fullName>
    <description>Host Website</description>
    <label>Host Web Site</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Host_Product__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>www.BETA.xataxrs.com</fullName>
            </value>
            <value>
                <fullName>www.shawtracker.ca</fullName>
            </value>
            <value>
                <fullName>www.turnpikedirect.com</fullName>
            </value>
            <value>
                <fullName>www.turnpikedirect.net</fullName>
            </value>
            <value>
                <fullName>www.xataxrs.com</fullName>
            </value>
            <value>
                <fullName>https://rdc-prod-web.aws.roadnet.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>