force-app/main/default/objects/Host_Information__c/fields/IFTA__c.field-meta.xml
<CustomField>
    <fullName>IFTA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if customer has purchased IFTA.</description>
    <label>IFTA</label>
    <type>Checkbox</type>
</CustomField>