force-app/main/default/objects/Host_Information__c/fields/Import_Source__c.field-meta.xml
<CustomField>
    <fullName>Import_Source__c</fullName>
    <label>Import Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CPQ</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Transfers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>