force-app/main/default/objects/Host_Information__c/fields/RDC_User__c.field-meta.xml
<CustomField>
    <fullName>RDC_User__c</fullName>
    <label>RDC User</label>
    <length>150</length>
    <type>Text</type>
</CustomField>