force-app/main/default/objects/Host_Information__c/fields/RDC_User_Email__c.field-meta.xml
<CustomField>
    <fullName>RDC_User_Email__c</fullName>
    <label>RDC User Email</label>
    <length>155</length>
    <type>Text</type>
</CustomField>