force-app/main/default/objects/Host_Information__c/fields/RDC_User_Password__c.field-meta.xml
<CustomField>
    <fullName>RDC_User_Password__c</fullName>
    <label>RDC User Password</label>
    <length>150</length>
    <type>Text</type>
</CustomField>