force-app/main/default/objects/Host_Information__c/validationRules/If_RDC_then_cant_send_email.validationRule-meta.xml
<ValidationRule>
    <fullName>If_RDC_then_cant_send_email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Host_Product__c, &apos;RDC&apos;), Email_Sent__c == true)</errorConditionFormula>
    <errorMessage>Email cannot be sent if Host Product is RDC.</errorMessage>
</ValidationRule>