force-app/main/default/objects/Host_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Host_Company_ID__c</columns>
    <columns>Host_Password__c</columns>
    <columns>Host_Product__c</columns>
    <columns>Host_Service__c</columns>
    <columns>RDC_User__c</columns>
    <columns>RDC_User_Email__c</columns>
    <columns>RDC_User_Password__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>